# aipp

./: .clang-tidy  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md
src/: defer.h  main.cc  main.cpp  main_test.cc  resource.h  resource_test.cc
tests/: CMakeLists.txt  main_test.cpp
tools/: lint.sh
